# UniversityKoledz

./: CMakeLists.txt  README.md
src/: Baza.txt  database.cpp  database.hpp  employee.cpp  employee.hpp  generator.cpp  generator.hpp  main.cpp  person.cpp  person.hpp  student.cpp  student.hpp  tests.cpp
